# pagespeed

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  pagespeed_insights_tool.py  pyproject.toml  test_pagespeed_insights_tool.py
.claude/: settings.local.json
.claude/memory/: worktree-workflow.md
.claude/plans/: 01-init.md  02-plan-workflow.md  03-pipeline-command.md  05-add-license.md  06-add-github-actions-ci.md  07-ci-cd-performance-budgets.md  08-pypi-distribution.md  09-multi-run-median-scoring.md  11-refactor-asyncio.md  12-errors-csv.md  13-add-full-flag.md  14-add-stream-flag.md  15-remove-multi-run.md  16-add-median-score-card.md  purrfect-sprouting-lovelace.md  vast-spinning-sparkle.md
.github/workflows/: publish.yml  release.yml  test.yml
docs/: ci-cd-performance-budgets.md
examples/: README.md
examples/basic/: pagespeed.toml  urls.txt
examples/ci-budget/: budget-lenient.toml  budget-strict.toml  pagespeed.toml
examples/multi-profile/: pagespeed.toml
examples/sitemap-pipeline/: pagespeed.toml
reports/: 20260216T182005Z-mobile.csv  20260216T182005Z-report.html
