[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pagespeed-insights"
dynamic = ["version"]
description = "CLI tool for batch Google PageSpeed Insights analysis with CSV/JSON/HTML reports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["pagespeed", "lighthouse", "performance", "web-vitals", "core-web-vitals"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
dependencies = ["requests", "pandas"]

[project.scripts]
pagespeed = "pagespeed_insights_tool:main"

[project.urls]
Homepage = "https://github.com/volkanunsal/pagespeed"
Repository = "https://github.com/volkanunsal/pagespeed"
Issues = "https://github.com/volkanunsal/pagespeed/issues"

[tool.hatch.version]
path = "pagespeed_insights_tool.py"

[tool.hatch.build]
include = ["pagespeed_insights_tool.py"]
